# GPURigidRegistrationLib

./: CMakeLists.txt  GPUDiscreteGaussianGradientImageFilter.cl  GPUGradientOrientationMatchingKernel.cl  GPURigidRegistration.cpp  README.md  gpu_rigidregistration.cpp  gpu_rigidregistration.h  itkGPU3DRigidSimilarityMetric.h  itkGPUGradientOrientationMatching.h  itkGPUGradientOrientationMatching.hxx  main.cpp
tests/: CMakeLists.txt  ComputeAccuracy.cxx  External_TestData.cmake  ImageRegistrationTest.cxx  ImageRegistrationWithInitialTransformTest.cxx  ImageRegistrationWithMaskTest.cxx
utils/: CMakeLists.txt  vtkXFMReader.cxx  vtkXFMWriter.cxx
